# chatbot-project

./: .env.example  .gitignore  README.md  main-chain.py  main.py  pyproject.toml  settings.py  test.py
chroma_db/: chroma.sqlite3
doc/: week7-retro.md  week8-retro.md
docs/: README.md  questions.md  tasks.md  trouble-shooting.md  versions.md  week10-retro.md  week11-retro.md  week7-retro.md  week8-retro.md  week9-retro.md
sian-til/: 260513 TIL.md  260514 TIL.md  260515 TIL.md  260516 TIL.md  260518 TIL.md  260520 TIL.md  260521 TIL.md  260530 TIL - Deepdive.md  260601 TIL.md  260602 TIL.md  260604 TIL.md  260605 TIL.md  260606 TIL(Deepdive).md  260608 TIL.md  260609 TIL.md  260610 TIL.md  260615 TIL.md  260616 TIL.md  260617 TIL.md  260622 TIL.md  260623 TIL.md  260624 TIL.md
src/: eval.py  graph.py  model.py  prompts.py  settings.py
src/dataset/: data_loader.py  eval_dataset.py  vector_store.py
src/rag/: chain.py  graph.py
